# yxa

./: .cvsignore  .gitignore  .topmsg  .travis.yml  CHANGES  COPYING  LDAPv3.erl  LDAPv3.hrl  Makefile.in  Makefile.template  README  admin_www.erl  adminwww.app-in  adminwww.app.in  adminwww.rel-in  adminwww.rel.in  appserver.app-in  appserver.app.in  appserver.erl  appserver.rel-in  appserver.rel.in  appserver_glue.erl  autotest.erl  bootstrap.erl  clientbranch.erl  clienttransaction.erl  configure.ac  contact.erl  contact_param.erl  database_call.erl  database_call.hrl  database_forward.erl  database_forward.hrl  database_regexproute.erl  database_regexproute.hrl  db_util.erl  directory.erl  directory.hrl  dnsutil.erl  dtmf.erl  (+96 more)
config/: yxa_config.erl  yxa_config.hrl  yxa_config_check.erl  yxa_config_erlang.erl
cpl/: Makefile.in  cpl.hrl  cpl_db.erl  cpl_test_util.erl  interpret_backend.erl  interpret_cpl.erl  interpret_time.erl  test_backend.erl  xml_parse.erl  xml_parse.hrl  xml_parse_util.erl
doc/: overview.edoc
doc-src/: overview.edoc
event_handler/: Makefile.in  event_handler.erl  event_handler_csyslog.erl
httpd/conf/: mime.types
httpd/docs/: index.html
m4/: erlang-extra.m4
mysql/: Makefile.in  mysql.erl  mysql_auth.erl  mysql_recv.erl
scripts/: auto-edoc.sh  codestats.pl  dialyze.sh  do-edoc.sh  format-for-edoc.pl  gnuplot_codestats.sh  init.sh.in  mksnapshot.sh
src/: Makefile.in  appserver.app-in  appserver.erl  appserver.rel  appserver.rel-in  appserver_glue.erl  appserver_test.erl  autotest.erl  autotest_util.erl  bootstrap.erl  config.hrl-in  contact.erl  contact_param.erl  dialog_server.erl  directory.erl  dnsutil.erl  group_regexp.erl  gruu.erl  hex.erl  incomingproxy.app-in  incomingproxy.erl  incomingproxy.rel  incomingproxy.rel-in  incomingproxy_test.erl  init.sh.in  key_val_db.erl  keylist.erl  local.erl  local.erl-default  local.erl-kth.se  local.erl-su.se  local_default.erl  local_kth_se.erl  local_su_se.erl  local_yxa_sip_su_se.erl  logger.erl  lookup.erl  outgoingproxy.app-in  outgoingproxy.erl  outgoingproxy.rel  (+40 more)
src/config/: Makefile.in  overview.edoc  yxa_config.erl  yxa_config.hrl  yxa_config_check.erl  yxa_config_default.erl  yxa_config_erlang.erl  yxa_config_util.erl  yxa_test_config.erl
src/cpl/: Makefile.in  README  cpl.hrl  cpl_db.erl  cpl_test_util.erl  interpret_backend.erl  interpret_cpl.erl  interpret_cpl_test.erl  interpret_time.erl  interpret_time_test.erl  overview.edoc  test_backend.erl  time_switch.erl  ts_date.erl  ts_datetime.erl  ts_duration.erl  xml_parse.erl  xml_parse_graph.erl  xml_parse_test.erl  xml_parse_util.erl
src/database/: Makefile.in  database_call.erl  database_eventdata.erl  database_forward.erl  database_gruu.erl  database_regexproute.erl  db_util.erl  overview.edoc  phone.erl  table_update.erl
src/eldap/: LDAPv3.asn1  LDAPv3.asn1db  Makefile.in  eldap.erl  overview.edoc
src/event/: Makefile.in  active_subscriber.erl  active_subscription.erl  dialog_package.erl  event_mnesia_monitor.erl  event_package.erl  eventserver.app-in  eventserver.erl  eventserver.rel  eventserver.rel-in  eventserver_test.erl  notifylist.erl  overview.edoc  presence_package.erl  presence_pidf.erl  presence_xmerl_xml.erl  subscription.erl  uaprofile_package.erl
src/event_handler/: Makefile.in  event_handler.erl  event_handler_csyslog.erl  overview.edoc  syslog_c-port.c
src/include/: Makefile.in  database_call.hrl  database_gruu.hrl  database_regexproute.hrl  event.hrl  phone.hrl  pstnproxy.hrl  sipproxy.hrl  siprecords.hrl  sipsocket.hrl  yxa_config.hrl
src/local/: Makefile.in  overview.edoc  su_bot.app-in  su_bot.erl  su_bot.rel-in  su_bot_refer.erl  su_botbackend.erl  su_pstnproxy_policy.erl  su_pstnproxy_policy_server.erl  yxa_jevent_bot.pl
src/mysql/: Makefile.in  mysql.erl  mysql_auth.erl  mysql_conn.erl  mysql_recv.erl  overview.edoc
src/policy/: spocp.erl
src/sipuserdb/: Makefile.in  overview.edoc  sipuserdb.erl  sipuserdb_file.erl  sipuserdb_file.hrl  sipuserdb_file_backend.erl  sipuserdb_ldap.erl  sipuserdb_mnesia.erl  sipuserdb_mysql.erl  sipuserdb_test.erl
src/testclientserver/: testclient.conf.sample  testclient.pl  testserver.app-in  testserver.erl  testserver.rel
src/transactionlayer/: Makefile.in  clienttransaction.erl  overview.edoc  servertransaction.erl  transactionlayer.erl  transactionstatelist.erl  transactionstatelist.hrl
src/transportlayer/: Makefile.in  mk_yxa_ssl_pkix_oid.erl  overview.edoc  sipsocket.erl  sipsocket_blacklist.erl  sipsocket_blacklist_probe.erl  sipsocket_tcp.erl  sipsocket_test.erl  sipsocket_udp.erl  socketlist.erl  socketlist.hrl  ssl_util.erl  stun.erl  stun.hrl  tcp_connection.erl  tcp_dispatcher.erl  tcp_listener.erl  tcp_receiver.erl  transportlayer.erl
src/unused/: admin_www.erl  adminwww.app-in  adminwww.rel-in  dtmfserver.c  gssapi.erl  refer.erl  register_client.erl  rtp.erl  sdp.erl  sipanswer.erl  sound.erl  speedtest_keylist.erl  stack_monitor.erl  stun_client.erl
yaws/docroot/: BOTTOM  HEAD  index.yaws  locationdb.yaws  locationdb_add.yaws  locationdb_delete.yaws  mnesiamgmt.yaws  mnesiamgmt_modify.yaws  node_info.yaws  regexp.yaws  regexp_add.yaws  regexp_delete.yaws  style.css  userdb.yaws  userdb_delete_address.yaws  userdb_delete_user.yaws  userdb_modify.yaws
yaws/docroot/su-internal/: check_locationdb.yaws  check_yxa_node.yaws  set_cpl.yaws
yaws/src/: Makefile.in  overview.edoc  yxa_virtweb.hrl  yxa_virtweb_cc.erl  yxa_virtweb_db.erl  yxa_yaws_util.erl
yaws/virtweb/: README  yssi-delete.yaws  yssi-dnscheck.yaws  yssi-edit.yaws  yssi-index.yaws
